--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,6 @@ project(engine)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(engine main.cpp)
+find_package(SFML 2.5 COMPONENTS graphics audio REQUIRED)
+
+target_link_libraries(engine sfml-graphics sfml-audio)
